# audiomatch

./: .coverage  .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.rst  build.py  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: deploy.yml  lint-and-test.yml
src/audiomatch/: __main__.py  cli.py  constants.py  exceptions.py  files.py  fingerprints.py  match.py  popcount.py  reports.py
src/audiomatch/popcount/: __init__.py  _popcount.c  _popcount.pyi  _popcount.pyx
tests/: test_cli.py  test_cli_invocation.py  test_files.py  test_fingerprints.py  test_match.py  test_reports.py
